Fixed clipping of text in other-option text box

--- a/server/static/survey/styles/main.css
+++ b/server/static/survey/styles/main.css
@@ -42,7 +42,11 @@ padding: 7px 9px;
 }
 
 .question input[type="number"] {
-    height: 40px;
+    height: 40px !important;
+}
+
+.input-other {
+    height: 44px;
 }
 
 .pull-right + .pull-right {
